--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   "homepage": "https://github.com/chcokr/mdast-lint-sentence-newline#readme",
   "dependencies": {
     "unist-util-visit": "^1.0.0"
+  },
+  "devDependencies": {
+    "mdast": "^1.2.0",
+    "mdast-lint": "^1.1.1"
   }
 }
