--- a/.remarkrc
+++ b/.remarkrc
@@ -1,7 +1,7 @@
 {
   "plugins": {
     "remark-lint": {
-      "external": ["remark-lint-sentence-newline"]
+      "external": ["./index.js"]
     }
   }
 }
